RESOLVED FIXED27920
Right click on timeline of media controls panel cause seek
https://bugs.webkit.org/show_bug.cgi?id=27920
Summary Right click on timeline of media controls panel cause seek
Hin-Chung Lam
Reported 2009-08-01 02:04:12 PDT
Steps to reproduce the bug: 1. Open a page with <video controls src="something"></video> 2. Play the movie 3. Right click on the time bar Expected behavior: Nothing should happen Actual behavior: Seeked to the current playback position. So the result is that if you right click many many times, you will seek to the current playback position over and over again.
Attachments
patch (4.28 KB, patch)
2009-08-01 02:50 PDT, Hin-Chung Lam
eric: review-
patch (4.32 KB, patch)
2009-08-07 01:10 PDT, Hin-Chung Lam
no flags
patch (4.34 KB, patch)
2009-08-07 01:13 PDT, Hin-Chung Lam
eric: review+
Hin-Chung Lam
Comment 1 2009-08-01 02:50:58 PDT
Eric Seidel (no email)
Comment 2 2009-08-06 18:03:14 PDT
Comment on attachment 33934 [details] patch Looks fine. Your if should use == LefButton (if that exists), or a comment to explain that 0 is the left button. Style viloation: 1 if (window.eventSender) 12 { If you were a committer I would just r+ and you could fix this when landing. Since I don't think you are, please re-post with the two above fixes
Eric Seidel (no email)
Comment 3 2009-08-06 18:03:14 PDT
Comment on attachment 33934 [details] patch Looks fine. Your if should use == LefButton (if that exists), or a comment to explain that 0 is the left button. Style viloation: 1 if (window.eventSender) 12 { If you were a committer I would just r+ and you could fix this when landing. Since I don't think you are, please re-post with the two above fixes
Hin-Chung Lam
Comment 4 2009-08-07 01:10:34 PDT
Hin-Chung Lam
Comment 5 2009-08-07 01:13:09 PDT
Eric Seidel (no email)
Comment 6 2009-08-07 08:51:41 PDT
Comment on attachment 34257 [details] patch LGTM! Thanks!
Hin-Chung Lam
Comment 7 2009-08-07 11:13:27 PDT
Thanks for the review!
Albert J. Wong
Comment 8 2009-08-07 14:48:48 PDT
Simon Fraser (smfr)
Comment 9 2009-08-11 21:33:58 PDT
This caused a bad regression in mouse handling (bug 28211). Please address as soon as possible, or revert this change.
Hin-Chung Lam
Comment 10 2009-08-11 22:14:04 PDT
I'm looking into the regression now.
Note You need to log in before you can comment on or make changes to this bug.