WebCore: Right click on timeline of media controls panel cause seek https://bugs.webkit.org/show_bug.cgi?id=27920

Patch by Alpha Lam <hclam@chromium.org> on 2009-08-07
Reviewed by Eric Seidel.

Add a test simulate the behavior of seeking by right clicking
on the time bar of media controls while playing.

* media/controls-right-click-on-timebar-expected.txt: Added.
* media/controls-right-click-on-timebar.html: Added.

LayoutTests: Right click on timeline of media controls panel cause seek
https://bugs.webkit.org/show_bug.cgi?id=27920

Patch by Alpha Lam <hclam@chromium.org> on 2009-08-07
Reviewed by Eric Seidel.

Add a test simulate the behavior of seeking by right clicking
on the time bar of media controls while playing.

* media/controls-right-click-on-timebar-expected.txt: Added.
* media/controls-right-click-on-timebar.html: Added.

Canonical link: https://commits.webkit.org/38518@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@46915 268f45cc-cd09-0410-ab3c-d52691b4dbfc